--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 * {
-    text-align: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #454545;
+    color: #fff;
 }
