feat: import css modules

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 
 @import url("./css/header.css");
 @import url("./css/body.css");
+@import url("./css/main.css");
+@import url("./css/footer.css");
 
 
 :root {
