Applying style on page in section elements (#2)
* docs: create a new pull request

* style: organize elements inside a services section

* refator: put nav links to lists

* style: import fonts from google fonts

* fix: fix menu nav

* chore: change name to global.style.css

* chore: rename file

* refator: fix link css, delete image about, organize text about

* style: apply style on fonts

* style: position elements and create media queries

* feat: insert CDN scrollReveal

* feature: implenet feature scroll reveal

* feat: insert table elements

* feat: import background section contact

* style: import background as png, svg is too heavy

* style: add a global style to titles

* feat: improviment and add text missing

* feat: apply scrollReveal to elements

* refactor: exclude local style and use globalstyle

* style: exclude deplicated code and aply style on form area

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,5 @@
 header {
-    background: url('../assets/img/banner-header.svg');
+    background: url("../assets/img/banner-header.svg");
     background-size: cover;
     background-repeat: no-repeat;
 
@@ -29,15 +29,21 @@ header {
     margin: 10px 0 36px 0;
 }
 
-
-.nav nav a {
+.nav nav ul li a {
     padding: 0 0 0 78px;
     text-decoration: none;
     font-family: var(--font-text);
     font-weight: normal;
     font-size: 1.5em;
 
-    color: #fff
+    text-decoration: none;
+
+    color: #fff;
+}
+
+ul {
+    display: flex;
+    list-style: none;
 }
 
 .title-header {
@@ -48,21 +54,21 @@ header {
     padding: 0 0 34px 0;
 
     font-family: var(--font-title);
-    font-weight: bold;
     font-size: 4em;
 }
 
-.title-header .description {
+.description {
     padding: 0 0 87px 0;
 
     font-family: var(--font-text);
-    font-weight: normal;
+    font-weight: bold;
     font-size: 1.2em;
+
+    color: #757272;
 
     width: 550px;
     text-align: center;
 }
-
 
 .button {
     padding: 25px 120px;
@@ -70,10 +76,11 @@ header {
     font-family: var(--font-text);
 
     color: #fff;
+    text-decoration: none;
 
     border: none;
     border-radius: 3px;
     outline: none;
 
-    background-color: #C56E07;
+    background-color: #c56e07;
 }
