--- a/src/css/header.css
+++ b/src/css/header.css
@@ -29,7 +29,7 @@ header {
     margin: 10px 0 36px 0;
 }
 
-.nav nav ul li a {
+li a {
     padding: 0 0 0 78px;
     text-decoration: none;
     font-family: var(--font-text);
@@ -83,4 +83,28 @@ ul {
     outline: none;
 
     background-color: #c56e07;
+}
+
+
+@media (max-width: 1280px) {
+
+    .title-header h1 {
+        padding: 15px 0 34px 0;
+        font-size: 3em;
+    }
+
+    .nav-logo-header {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    ul {
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .nav nav ul li a {
+        padding: 30px;
+    }
 }
