--- a/src/css/main.css
+++ b/src/css/main.css
@@ -324,3 +324,64 @@ footer img {
         margin-bottom: 50px;
     }
 }
+
+@media (max-width: 727px) {
+
+    .container {
+        max-width: 80%;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .name-email {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 27px;
+    }
+    
+    .tel-textarea {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    input[type=text] {
+        width: 100%;
+        margin-right: 0;
+    }
+    
+    input[type=tel] {
+        width: 100%;
+        margin-right: 0;
+    }
+    
+    input[type=email] {
+        width: 100%;
+    }
+
+    .text-history, .title-services > p {
+        width: 80%;
+        margin: auto;
+        text-align: center;
+    }
+
+    .form {
+        background-color: #fff;
+        color: #000;
+    
+        max-width: 100%;
+        padding: 27px 46px;
+    }
+
+    table, th, td {
+        width: 60%;
+        padding: 0;
+        font-size: 1em;
+    }
+
+    .button-form-wrapper .button {
+        padding: 10px;
+    }
+}
